--- a/test_setting.ini
+++ b/test_setting.ini
@@ -5,169 +5,139 @@ voicechannel =
 textchannel = 
 
 before_alert = 1
-before_alert1 = 5
-mungChk = 10
+before_alert1 = 0
+mungChk = 0
 
-bossname = 기감
-gentime = 1:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+restarttime = 04:00
+voicechannel = ABC BoT
+textchannel = ABC BoT
 
-bossname = 거드
-gentime = 3:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
+before_alert = 1
+before_alert1 = 0
+mungChk = 0
 
-bossname = 이프
-gentime = 2:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 마요
-gentime = 3:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 피닉
-gentime = 6:53
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 대흑
+bossname = 자라스
 gentime = 3:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
+kakaoOnOff = 1
 
-bossname = 서드
-gentime = 2:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 북드
-gentime = 2:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 중드
+bossname = 바란
 gentime = 3:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
+kakaoOnOff = 0
 
-bossname = 동드
-gentime = 3:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 아르
+bossname = 그라트12시
 gentime = 4:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
+kakaoOnOff = 0
 
-bossname = 자크
-gentime = 3:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 카파
-gentime = 2:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 웜
-gentime = 2:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 데스
-gentime = 7:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 커츠
-gentime = 10:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 녹샤
-gentime = 2:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 빨샤
-gentime = 2:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 산두
-gentime = 3:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 에자
-gentime = 5:00
-nogencheck = 1
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 스피
-gentime = 3:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 개미
-gentime = 2:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 도펠
-gentime = 4:00
-nogencheck = 0
-before_alert_ment = 입니다
-alert_ment = 입니다. 어여오세요
-
-bossname = 감데
+bossname = 그라트3시
 gentime = 6:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
+kakaoOnOff = 1
 
-bossname = 대장로
-gentime = 3:00
-nogencheck = 1
+bossname = 지하2층
+gentime = 6:00
+nogencheck = 
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
+kakaoOnOff = 0
 
-bossname = 베리스
-gentime = 3:00
-nogencheck = 1
+bossname = 가이잔
+gentime = 4:00
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
+kakaoOnOff = 0
 
-bossname = 케레
-gentime = 3:00
-nogencheck = 1
+bossname = 코와르
+gentime = 4:00
+nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
+kakaoOnOff = 1
 
+bossname = 드라트
+gentime = 4:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+kakaoOnOff = 0
 
+bossname = 리마
+gentime = 4:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+kakaoOnOff = 0
+
+bossname = 지하C
+gentime = 4:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+kakaoOnOff = 0
+
+bossname = 지하D
+gentime = 4:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+kakaoOnOff = 0
+
+bossname = 밤던B6
+gentime = 4:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+kakaoOnOff = 0
+
+bossname = 밤던C
+gentime = 4:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+kakaoOnOff = 0
+
+bossname = 밤던전설
+gentime = 18:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+kakaoOnOff = 0
+
+bossname = 운석A
+gentime = 20:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+kakaoOnOff = 0
+
+bossname = 운석D
+gentime = 20:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+kakaoOnOff = 0
+
+bossname = 피라미드
+gentime = 32:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+kakaoOnOff = 0
+
+bossname = 타락
+gentime = 35:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+kakaoOnOff = 0
