--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,4 +1,4 @@
-Bot_Token = NjExOTIyMjI4NzQwNjIwMjg5.XVa4UQ.GKFErWad4i8Ggaoz_hyZQ0mBt8w
+Bot_Token = JaXDKxiSbsvbF4xHyqEgMxME5qUJSNNF
 KakaoChatRoom = 
 KakaoOnOff = 0
 
